United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7090069 Java launcher hangs in infinite loop on windows when UseNUMA[Interleaving] is specified
7090069 : Java launcher hangs in infinite loop on windows when UseNUMA[Interleaving] is specified

Details
Type:
Bug
Submit Date:
2011-09-13
Status:
Closed
Updated Date:
2011-11-28
Project Name:
JDK
Resolved Date:
2011-11-28
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs22
Fixed Versions:
hs22

Related Reports
Backport:
Backport:

Sub Tasks

Description
Java launcher hangs in infinite loop on windows when UseNUMA or UseNUMA is specified. 
It occurs when a host doesn't support NUMA (for example, jfx-vm444).

                                    

Comments
EVALUATION

See main CR
                                     
2011-09-24
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/0a63380c8ac8
                                     
2011-09-14



Hardware and Software, Engineered to Work Together