7090069: Java launcher hangs in infinite loop on windows when UseNUMA[Interleaving] is specified

Fix _numa_used_node_list array size specification

Reviewed-by: kvn, johnc, jmasa, ysr